  and persistent via dialog; also add options for them to the CLI.
  * LP#786106: Add Prev/Next items, with accelerators, to cycle through
  Fractal and Colour menus.
  * Fractal setup cosmetic fixes
  * LP#786549, LP#891954: Add prefs for HUD placement and colouring.
  * LP#783086: Add pref for max number of plotting threads.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Sat, 19 Nov 2011 11:21:59 +1300

brot2 (0.5) natty; urgency=low

  * Beta release.
  * LP#789693: Create a Registry class, overhaul palettes and fractals to use
    it.
  * LP#786605: Implemented command-line interface as a separate
    executable, brot2cli.
  * Fix some edge cases in smooth palettes.
  * LP#783077: Implement Mandeldrop fractal and its derivatives.
  * LP#783087: Compute better precision limits for params dialog and HUD.
  Don't bother with a precision limit on input.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Wed, 12 Oct 2011 22:02:47 +1300

brot2 (0.2) natty; urgency=low

  * Alpha release.
  * LP#783038: Replace deprecated calls to gtk_signal_connect(_object)
  * LP#783038: Overhaul menu creation to use GtkUIManager instead of
  GtkItemFactory. 
  * LP#783038: Overhaul drawing to use Cairo. We draw via three Cairo
  surfaces: the plot ("canvas"), the HUD and the dragrect; add explicit
  depends on libcairo and libpango.
  * LP#783083: Make member functions take a const 'this' where possible.
  * Now uses autoconf.
  * Overhaul Fractal.h et al to use a namespace.
  * Rearrange source into libbrot2/ and gtkui/.
  * LP#783036: Split up gtkui source, convert to gtkmm.
  * LP#785166: Replace getopt with Glib::OptionOptionContext etc.

 -- Ross Younger <0ryoungerk.launchpad@coriolis.greenend.org.uk>  Fri, 15 Jul 2011 19:05:11 +1200

brot2 (0.1) natty; urgency=low

  * Initial packaging. (Closes: LP#783031)
  * Interim fix for assert on startup (LP#783106)
  * Update version ident, add "-v" option (Closes: LP#783139)
